# discord-updater

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: lib.rs  main.rs
