[package]
name = "discord-updater"
version = "0.1.3"
edition = "2021"
authors = ["execrooted <execrooted@gmail.com>"]
description = "A tool to download and install the latest Discord version to resolve update issues."
license = "MIT"
repository = "https://github.com/execrooted/discord-updater"
homepage = "https://github.com/execrooted/discord-updater"
readme = "README.md"
keywords = ["discord", "updater", "linux", "cli"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "discord_updater"
path = "src/lib.rs"

[[bin]]
name = "discord-updater"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
flate2 = "1.0"
tar = "0.4"
anyhow = "1.0"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }

